# psqlpy

./: .env_test.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  test.py  tox.ini  tox_ssl_mode.ini
.github/: pull_request_template.md
.github/actions/setup_postgres/: action.yaml
.github/workflows/: CI.yml  deploy-docs.yml  prek.yaml  release.yml  release_docs.yaml  test.yaml
docs/: README.md  benchmarks.md  contribute.md  external_connection_pools.md  faq.md
docs/.vuepress/: config.ts  sidebar.ts  theme.ts
docs/.vuepress/.temp/components/: config.js
docs/.vuepress/.temp/internal/: clientConfigs.js  routes.js  siteData.js  themeData.js
docs/.vuepress/.temp/md-enhance/: config.js
docs/.vuepress/.temp/pages/: 404.html.js  contribute.html.js  contribute.html.vue  index.html.js  index.html.vue
docs/.vuepress/.temp/pages/components/: components_overview.html.js  components_overview.html.vue  connection.html.js  connection.html.vue  connection_pool.html.js  connection_pool.html.vue  connection_pool_builder.html.js  connection_pool_builder.html.vue  cursor.html.js  cursor.html.vue  exceptions.html.js  exceptions.html.vue  index.html.js  results.html.js  results.html.vue  transaction.html.js  transaction.html.vue
docs/.vuepress/.temp/pages/introduction/: components_overview.html.js  components_overview.html.vue  index.html.js  index.html.vue  introduction.html.js  introduction.html.vue  lets_start.html.js  lets_start.html.vue
docs/.vuepress/.temp/pages/usage/: index.html.js  usage.html.js
docs/.vuepress/.temp/pages/usage/frameworks/: aiohttp.html.js  aiohttp.html.vue  blacksheep.html.js  blacksheep.html.vue  fastapi.html.js  fastapi.html.vue  frameworks.html.js  index.html.js  litestar.html.js  litestar.html.vue  robyn.html.js  robyn.html.vue
docs/.vuepress/.temp/pages/usage/row_factories/: index.html.js  overall_usage.html.js  overall_usage.html.vue  predefined_row_factories.html.js  predefined_row_factories.html.vue  row_factories.html.js
docs/.vuepress/.temp/sass-palette/: hope-config.scss  hope-palette.scss  hope-style.scss
docs/.vuepress/.temp/search-pro/: root.js  store.js
docs/.vuepress/.temp/theme-hope/: config.js
docs/.vuepress/styles/: config.scss  index.scss
docs/components/: components_overview.md  connection.md  connection_pool.md  connection_pool_builder.md  copy.md  cursor.md  exceptions.md  listener.md  prepared_statement.md  results.md  transaction.md
docs/examples/aiohttp/: start_example.py
docs/examples/fastapi/: advanced_example.py  start_example.py
docs/integrations/: opentelemetry.md  sqlalchemy.md  taskiq.md
docs/introduction/: components_overview.md  introduction.md  lets_start.md
docs/usage/: parameters.md  usage.md
docs/usage/frameworks/: aiohttp.md  blacksheep.md  fastapi.md  frameworks.md  litestar.md  panther.md  robyn.md
docs/usage/row_factories/: overall_usage.md  predefined_row_factories.md  row_factories.md
docs/usage/types/: advanced_type_usage.md  array_types.md  extra_types.md  supported_types.md  types.md
examples/aiohttp/: start_example.py
examples/fastapi/: advanced_example.py  start_example.py
external_crates/pyo3-asyncio/: Cargo.toml
external_crates/pyo3-asyncio/src/: lib.rs
psqlpy-stress/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  dashboard.json  docker-compose.yaml  pyproject.toml
psqlpy-stress/chart/: values.yaml
psqlpy-stress/chart/templates/: deployment.yaml  service.yaml
psqlpy-stress/psqlpy_stress/: api_transaction.py  app.py  helpers.py  influx_db_helpers.py  lifecycle.py  mocker.py  models.py  piccolo_conf.py  settings.py
psqlpy-stress/psqlpy_stress/api/: piccolo.py  plain_queries.py
psqlpy-stress/psqlpy_stress/migrations/: env.py
psqlpy-stress/psqlpy_stress/migrations/versions/: 06d989926550_basic_user_table.py  d162c084f522_big_af_table.py
psqlpy-stress/psqlpy_stress/models/: piccolo.py  sqlalchemy.py
python/psql_rust_driver/: __init__.py  exceptions.py  extra_types.py
python/psql_rust_driver/_internal/: __init__.pyi  exceptions.pyi  extra_types.pyi
python/psql_rust_engine/: __init__.py
python/psql_rust_engine/_internal/: __init__.pyi
python/psqlpy/: __init__.py  exceptions.py  extra_types.py  geometric_types.py  row_factories.py
python/psqlpy/_internal/: __init__.pyi  exceptions.pyi  extra_types.pyi  geometric_types.pyi  row_factories.pyi
python/tests/: conftest.py  helpers.py  test_binary_copy.py  test_connection.py  test_connection_pool.py  test_connection_pool_builder.py  test_copy_records.py  test_cursor.py  test_kwargs_parameters.py  test_listener.py  test_query_results.py  test_record.py  test_row_factories.py  test_ssl_mode.py  test_ssl_mode_allow_retry.py  test_statement_lifecycle.py  test_transaction.py  test_value_converter.py
src/: Untitled-1.py  additional_types.rs  common.rs  engine.rs  extra_types.rs  format_helpers.rs  geometric_types.rs  lib.rs  options.rs  query_result.rs  row_factories.rs  runtime.rs  value_converter.rs
src/connection/: impls.rs  mod.rs  structs.rs  traits.rs
src/driver/: common.rs  common_options.rs  conn_trait.rs  connection.rs  connection_pool.rs  connection_pool_builder.rs  cursor.rs  inner_connection.rs  inner_transaction.rs  listener.rs  mod.rs  portal.rs  prepared_statement.rs  psqlpy_manager.rs  runtime.rs  transaction.rs  transaction_options.rs  utils.rs
src/driver/listener/: core.rs  mod.rs  structs.rs
src/exceptions/: mod.rs  python_errors.rs  rust_errors.rs
src/statement/: cache.rs  mod.rs  parameters.rs  query.rs  statement.rs  statement_builder.rs  utils.rs
src/transaction/: impls.rs  mod.rs  structs.rs
src/value_converter/: additional_types.rs  consts.rs  from_python.rs  mod.rs  raw_buf.rs  to_python.rs  traits.rs  utils.rs
src/value_converter/dto/: converter_impls.rs  enums.rs  funcs.rs  impls.rs  mod.rs
src/value_converter/funcs/: from_python.rs  to_python.rs
src/value_converter/models/: decimal.rs  dto.rs  internal_char.rs  interval.rs  mod.rs  serde_value.rs  uuid.rs
(+8 files in other folders)
