[package]
name = "psqlpy"
version = "0.12.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "psqlpy"
crate-type = ["cdylib"]

[dependencies]
deadpool = { version = "0.12", features = ["managed"] }
deadpool-postgres = "0.14"
# TODO(python-3.10-drop): Bump pyo3/pyo3-async-runtimes to 0.28+. pyo3 0.27
# dropped Python 3.10 support, which psqlpy still ships; once 3.10 EOL is
# observed in this repo, also flip the source-side TODOs marked with the same
# tag back to their 0.28 form (Python::attach, FromPyObject<'a, 'py>::extract,
# OnceLockExt, pyclass(from_py_object), etc.).
pyo3 = { version = "0.26", features = [
    "chrono",
    "experimental-async",
    "rust_decimal",
    "py-clone",
    "macros",
    "multiple-pymethods",
    "generate-import-lib",
] }
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"] }

tokio = { version = "1.35.1", features = ["full"] }
thiserror = "1.0.56"
bytes = "1.5.0"
byteorder = "1.5.0"
chrono = "0.4.33"
chrono-tz = "0.8.5"
uuid = { version = "1.7.0", features = ["v4"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.113"
futures-util = "0.3.30"
macaddr = "1.0.1"
geo-types = "0.7.13"
postgres-types = { version = "0.2", features = ["derive"] }
tokio-postgres = { version = "0.7", features = [
    "with-serde_json-1",
    "array-impls",
    "with-chrono-0_4",
    "with-uuid-1",
    "with-geo-types-0_7",
] }
postgres-protocol = "0.6"
postgres-openssl = "0.5"
rust_decimal = { version = "1.42", features = [
    "db-postgres",
    "db-tokio-postgres",
] }
postgres_array = "0.11"
openssl = { version = "= 0.10.64", features = ["vendored"] }
itertools = "0.12.1"
openssl-src = "= 300.2.2"
openssl-sys = "= 0.9.102"
pg_interval = "0.4"
pgvector = { version = "0.4", features = ["postgres"] }
futures-channel = "0.3.31"
futures = "0.3.31"
regex = "1.11.1"
once_cell = "1.20.3"