[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "psqlpy"
requires-python = ">=3.8"
keywords = [
    "postgresql",
    "psql",
    "async-driver",
    "psql-driver",
    "postgresql-driver",
    "python-driver",
]
classifiers = [
    "Typing :: Typed",
    "Topic :: Database",
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Topic :: Database :: Front-Ends",
]
authors = [{ email = "askiselev00@gmail.com" }, { name = "Kiselev Aleksandr" }]
maintainers = [{ name = "Kiselev Aleksandr", email = "askiselev00@gmail.com" }]
description = "Async PostgreSQL driver for Python written in Rust"
dynamic = ["version"]

[tool.maturin]
python-source = "python"
module-name = "psqlpy._internal"
features = ["pyo3/extension-module"]

[project.urls]
homepage = "https://github.com/qaspen-python/psqlpy"
repository = "https://github.com/qaspen-python/psqlpy"
documentation = "https://github.com/qaspen-python/psqlpy/blob/main/README.md"
